# src/auth/auth-provider/auth-provider.controller.ts
@@ -1,23 +1,24 @@
 import { Controller, Post, Body, UseGuards } from "@nestjs/common";
 import { AuthProviderService } from "./auth-provider.service";
 import { SigninDto } from "src/dtos";
-import { ApiTags } from "@nestjs/swagger";
+import { ApiBearerAuth, ApiTags } from "@nestjs/swagger";
 import { ProviderSignupDto } from "../../dtos/provider-signup.dto";
+import { AuthGuard } from "../guard/auth.guard";
 
-
+@ApiBearerAuth()
 @ApiTags('authentication-provider')
-@Controller('auth/provider')
+@Controller('provider/auth')
 export class AuthProviderController {
-constructor(private readonly authService: AuthProviderService) {}
+constructor(private readonly authProviderService: AuthProviderService) {}
 
-  //@UseGuards(AuthGuard)
+  @UseGuards(AuthGuard)
   @Post('signup')
   async signup(@Body() dto: ProviderSignupDto){
-    return await this.authService.signup(dto);
+    return await this.authProviderService.signup(dto);
   }
 
   @Post('signin')
   async signin(@Body() dto: SigninDto){
-    return await this.authService.signin(dto);
+    return await this.authProviderService.signin(dto);
   }
 }
